<?xml version="1.0"?>
<package format="2">
  <!-- Package description -->
  <name>rostweet</name>
  <version>0.1.0</version>
  <description>The rostweet meta-package gathers utilities for interfacing ROS with the Twitter microblogging service.</description>
  <maintainer email="mail@xperroni.me">Helio Perroni Filho</maintainer>
  <author email="marioprats@gmail.com">Mario Prats</author>
  <license>BSD</license>
  <url type="repository">https://github.com/xperroni/rostweet</url>
  <url type="website">http://wiki.ros.org/rostweet</url>

  <!-- Compile-time dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rostweet_bridge</exec_depend>
  <exec_depend>rostweet_msgs</exec_depend>

  <!-- Export settings -->
  <export>
    <metapackage/>
  </export>
</package>

