<?xml version="1.0"?>
<package>
  <!-- Package description -->
  <name>rostweet_msgs</name>
  <version>0.1.0</version>
  <description>Messages for communication with the Twitter bridge node.</description>
  <maintainer email="mail@xperroni.me">Helio Perroni Filho</maintainer>
  <author email="marioprats@gmail.com">Mario Prats</author>
  <license>BSD</license>
  <url type="repository">https://github.com/xperroni/rostweet</url>
  <url type="website">http://wiki.ros.org/rostweet</url>

  <!-- Compile-time and runtime dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>sensor_msgs</depend>
</package>

